<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/coap_sms_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/url_sms_before_telephone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coap_sms_before_telephone_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/textFocusDummySMS"
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <requestFocus />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTelephoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintIP"
            android:lines="1">
        </EditText>

        <TextView
            android:id="@+id/url_sms_after_tel_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_sms_after_telephone_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/coap_ip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/url_before_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coap"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:lines="1"/>

        <LinearLayout
            android:id="@+id/textFocusDummy"
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <requestFocus />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextIP"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.57"
            android:hint="@string/hintIP"
            android:text="@string/defaultIP" />

        <TextView
            android:id="@+id/url_between_ip_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/between_ip_port"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintPort"
            android:inputType="number"
            android:lines="1"
            android:text="@string/defaultPort" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#741BE0" />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.11"
            android:text="@string/status" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/responseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>